# MoodleDiscordBot

./: Cargo.toml
bot/: Cargo.toml
bot/src/: main.rs
bot/src/background/: mod.rs  scan_scheduler.rs
bot/src/commands/: course_selection.rs  login.rs  logout.rs  mod.rs  update.rs
bot/src/moodle_stuff/: accounts.rs  course_scanning.rs  mod.rs
moodle/: Cargo.toml
moodle/src/: lib.rs
moodle/src/data/: comparable.rs  course_contents.rs  course_traversal.rs  gen_module.rs  mod.rs
moodle/src/data/modules/: assignment.rs  bigbluebutton.rs  chat.rs  choice.rs  feedback.rs  folder.rs  forum.rs  glossary.rs  label.rs  mod.rs  page.rs  quiz.rs  resource.rs  unknown.rs  url.rs
moodle/src/data/other_content/: courses.rs  file.rs  mod.rs  section.rs
